--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body{
     width: 150px;
 }
 .card{
-    background-color: rgba(255, 232, 253, 0.658);
+    background-color: rgba(252, 216, 249, 0.658);
 }
 
 .color{
@@ -31,4 +31,16 @@ body{
     display: inline;
     object-fit: cover;
     object-position: 50% 50%;
+}
+.card-title{
+    text-align: center;
+    padding: .5rem;
+    font-family: cursive;
+}
+
+.card-text{
+    text-align: center;
+    font-size: 1rem;
+    font-style: italic;
+
 }
